[sasl_syslog] Add possibility to hack application specific event handlers, like bigcouch
Test Plan: read, test

Reviewers: hsychla, tbreddin, aschultz, vtarasen

Reviewed By: hsychla

Differential Revision: https://review.tpip.net/D609

--- a/tetrapak/config.ini
+++ b/tetrapak/config.ini
@@ -3,4 +3,4 @@ version = "~t.~o"
 
 [package]
 maintainer = "Felix Lange <fl@travelping.com>"
-exclude = "\\.gitignore|README\\.md"
+exclude = "README\\.md|\\.gitignore|\\.arcconfig"
